2007-12-07  Glenn Morris  <rgm@gnu.org>

	* allout.el (allout-write-file-hook-handler):
	* textmodes/reftex.el (reftex-TeX-master-file):
	* textmodes/reftex-parse.el (reftex-short-context):
	Revert previous change.

2007-12-07  Michael Albinus  <michael.albinus@gmx.de>

	* net/dbus.el (dbus-hash-table=): Fix for new hash table key
	structure.
	(dbus-list-hash-table, dbus-name-owner-changed-handler): New
	defuns.
	(dbus-check-event, dbus-handle-event, dbus-event-bus-name)
	(dbus-event-service-name, dbus-event-path-name)
	(dbus-event-interface-name, dbus-event-member-name): Fix for new
	event structure.
	(dbus-list-activatable-names, dbus-list-names)
	(dbus-list-queued-owners, dbus-get-name-owner, dbus-introspect):
	Reorder `dbus-call-method' arguments.

2007-12-06  D. Goel  <deego3@gmail.com>

	* allout.el (allout-write-file-hook-handler):
	* textmodes/reftex.el (reftex-TeX-master-file):
	* textmodes/org.el (org-paste-subtree):
	* progmodes/vhdl-mode.el (vhdl-template-modify):
	* progmodes/idlw-shell.el (idlwave-shell-send-command)
	(idlwave-shell-display-line):
	* progmodes/ada-xref.el (ada-find-file, ada-get-all-references)
	(ada-xref-find-in-modified-ali, ada-find-in-src-path):
	* net/trampver.el (x):
	* mail/uce.el (uce-reply-to-uce):
	* mail/rmailout.el (rmail-output):
	* mail/feedmail.el (feedmail-dump-message-to-queue):
	* whitespace.el (whitespace-write-file-hook):
	* wdired.el (wdired-check-kill-buffer):
	* vc.el (vc-update):
	* vc-mcvs.el (vc-mcvs-checkin):
	* vc-cvs.el (vc-cvs-checkin):
	* man.el (Man-bgproc-sentinel, Man-goto-see-also-section):
	* ibuffer.el (ibuffer-current-buffer):
	* dired.el (dired-move-to-end-of-filename):
	* bindings.el (complete-symbol):
	* textmodes/org-publish.el (org-publish-file):
	(org-publish-current-project):
	* textmodes/reftex-parse.el (reftex-short-context):
	* textmodes/texinfmt.el: Fix buggy calls to `error'.

2007-12-06  Stefan Monnier  <monnier@iro.umontreal.ca>

	* doc-view.el (doc-view-dvi->pdf-sentinel)