@@ -2375,7 +2375,7 @@ matter what the settings of that variable."
     (if (not (idlwave-shell-valid-frame frame))
 	;; fixme: errors are dangerous in shell filters.  but i think i
 	;; have never encountered this one.
-        (error "%s" (concat "invalid frame - unable to access file: " (car frame)))
+        (error "invalid frame - unable to access file: %s" (car frame))
 ;;;
 ;;; buffer : the buffer to display a line in.
 ;;; select-shell: current buffer is the shell.
